2010-02-26  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add highlight-tail.

	* lisp/highlight-tail.el: Add.

	* init-site.el: Add pulse setting.

	* init-basic.el (find-dotemacs-file): Add.

2010-02-24  Meteor Liu  <meteor1113@gmail.com>

	* dotemacs.el: Delete.

	* init-misc.el: Format.

	* init-site.el: Format.

	* init-basic.el: Format.

	* init-misc.el: Enable auto-complete-mode in change-log-mode.

	* init-basic.el: Bind (kbd "C-c q") to (auto-fill-mode).
	Trun on auto-fill-mode in change-log-mode.
	(c-mode-common-hook): Turn on auto-fill-mode in cc-mode.
	(emacs-lisp-mode-hook): Turn on auto-fill-mode in emacs-lisp-mode.

2010-02-23  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (uniquify-buffer-name-style): Set to 'forward.

	* init-misc.el (require): Change highlight-symbol-idle-delay to 0.05.

2010-02-22  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (grep-current-dir): Change "grep -nr" to "grep -inr".

2010-02-03  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Delete (setq compilation-window-height 10).

2010-02-01  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: (setq yas/wrap-around-region t).

2010-01-28  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Set highlight-symbol-idle-delay to 0.
	Remove defadvice highlight-symbol-mode-post-command, because highlight-symbol-idle-delay is 0 will resolve gut-tooltip-mode's problem.

2010-01-27  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add defadvice highlight-symbol-mode-post-command.

2010-01-25  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (compilation-window-height): Some variables for compilation.
	(compilation-window-height): Change from 15 to 10.

2010-01-21  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (require): Modify ac-trigger-commands for auto-complete in org-mode.

2010-01-16  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Add (moccur-all-buffers).

2010-01-12  Meteor Liu  <meteor1113@gmail.com>
